[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "domain_word_embeddings"
version = "0.0.1"
authors = []
description = "Code for Domain-Specific Word Embeddings with Structure Prediction"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "aiohttp==3.8.3",
"matplotlib==3.6.0",
"aiosignal==1.2.0",
"async-timeout==4.0.2",
"attrs==22.1.0",
"blis==0.7.9",
"catalogue==2.0.8",
"certifi==2022.9.24",
"charset-normalizer==2.1.1",
"click==8.1.3",
"confection==0.0.3",
"cymem==2.0.7",
"datasets==2.6.1",
"dill==0.3.5.1",
"en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl",
"filelock==3.8.0",
"frozenlist==1.3.1",
"fsspec==2022.10.0",
"huggingface-hub==0.10.1",
"idna==3.4",
"Jinja2==3.1.2",
"langcodes==3.3.0",
"MarkupSafe==2.1.1",
"multidict==6.0.2",
"multiprocess==0.70.13",
"murmurhash==1.0.9",
"networkx==2.8.7",
"numpy==1.23.4",
"packaging==21.3",
"pandas==1.5.1",
"pathy==0.6.2",
"preshed==3.0.8",
"pyarrow==9.0.0",
"pydantic==1.10.2",
"pyparsing==3.0.9",
"python-dateutil==2.8.2",
"pytz==2022.5",
"PyYAML==6.0",
"requests==2.28.1",
"responses==0.18.0",
"scipy==1.9.3",
"six==1.16.0",
"smart-open==5.2.1",
"spacy==3.4.2",
"spacy-legacy==3.0.10",
"spacy-loggers==1.0.3",
"srsly==2.4.5",
"thinc==8.1.5",
"torch>=1.12.0",
"tqdm==4.64.1",
"typer==0.4.2",
"typing_extensions==4.4.0",
"urllib3==1.26.12",
"wasabi==0.10.1",
"xxhash==3.1.0",
"yarl==1.8.1",
]

[project.urls]
"Homepage" = "https://github.com/stephaniebrandl/domain-word-embeddings"
"Bug Tracker" = "https://github.com/stephaniebrandl/domain-word-embeddings/issues"
